--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>gapiduOs</groupId>
-	<artifactId>gapiduOs</artifactId>
+	<groupId>gapiduOsrc</groupId>
+	<artifactId>gapiduOsrc</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
 	<build>
-		<sourceDirectory>src</sourceDirectory>
 
 		<plugins>
 			<plugin>
@@ -68,7 +67,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<version>1.5.3.RELEASE</version>
 		</dependency>
-
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>6.0.5</version>
+		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
